<resources>
    <string name="app_name">SporTeam</string>

    <string name="mail">Email</string>
    <string name="name">Your Name</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="passwordRepeat">Repeat your password</string>
    <string name="phone">Phone</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="filterHeadLine">Filter</string>
    <string name="myGames">my games</string>
    <string name="soccer">Soccer</string>
    <string name="basketball">Basketball</string>
    <string name="tennis">Tennis</string>
    <string name="city">City</string>
    <string name="presToChoose">press to choose</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm</string>


    /////////////////////////////////////////Host new game activity/////////////////////////////////////////////

    <string name="category_label">Pick a category</string>
    <string name="CitiesName">City</string>
    <string name="numPlayers">Select maximum players</string>
    <string name="timeSelect">Select time</string>
    <string name="dateSelect">Select date</string>
    <string name="address">Address</string>
    <string name="submitBtn">Submit</string>
    <string name="backBtn">Back</string>
    ////////////REGISTER//////////////


    ////////////Array Game Category List//////////////
    <string-array name="gameCategory_name_list">
        <item>Soccer</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Running Group</item>
    </string-array>

    ////////////Array Cities List//////////////
    <string-array name="city_name">
        <item>Tel-Aviv</item>
        <item>Petach Tiqwa</item>
        <item>Beer Sheva</item>
        <item>Hifa</item>
        <item>Eilat</item>
        <item>Newe Yamin</item>
        <item>Kfar Saaba</item>
        <item>Ramat Gan</item>
        <item>Holon</item>
        <item>Baat Yam</item>
        <item>Hertzliya</item>
        <item>Ramat HaSharon</item>
        <item>Rhaanana</item>
        <item>Hod HaSharon</item>
        <item>Natanya</item>
        <item>Hadera</item>
        <item>Jerosalem</item>
        <item>Rishon Le Tizyon</item>
        <item>Ashdod</item>
        <item>Ariel</item>
    </string-array>
    <string name="title_activity_connect_to_google_map">Map</string>

    ////////////////////////////////Home Menu///////////////////////////////////
    <string name="setting_item">"Setting"</string>
    <string name="logout_item">"Log Out"</string>
    <string name="take_pic_item">"Take your picture"</string>
    <string name="call_support_item">"Call support"</string>
    <string name="logoutDialog_home">", Are you sure that you want to log out??"</string>










</resources>
