<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/setting_menu"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/setting_item"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/take_pic_menu"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/take_pic_item"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/callSupport_menu"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/call_support_item"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/logout_menu"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/logout_item"
        app:showAsAction="always"
        />

</menu>