<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yonimor.sporteam.sporteam.Register"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:text="asd"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error_label"
            android:layout_weight="2"
            style="@style/Labs"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_label"
            android:layout_weight="2"
            style="@style/Labs"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_editxt"
            android:layout_weight="1"
            style="@style/fields"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passLab"
            android:layout_weight="2"
            style="@style/Labs"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passField"
            android:layout_weight="1"
            style="@style/fields"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:text="@string/passwordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeatPass_label"
            android:layout_weight="2"
            style="@style/Labs"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/repeatPass_editxt"
            android:layout_weight="1"
            style="@style/fields"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:text="@string/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_lab_register"
            android:layout_weight="2"
            style="@style/Labs"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/email_txt_register"
            android:layout_weight="1"
            style="@style/fields"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:text="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_lab_register"
            android:layout_weight="2"
            style="@style/Labs"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/phone_txt_register"
            android:layout_weight="1"
            style="@style/fields"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:text="@string/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/age_lab_register"
            android:layout_weight="2"
            style="@style/Labs"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/age_txt_register"
            android:layout_weight="1"
            style="@style/fields"/>
    </LinearLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/genderGroup"
        android:orientation="horizontal">

        <RadioButton
            android:text="@string/genderMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maleRBut"
            android:layout_weight="1" />



        <RadioButton
            android:text="@string/genderFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/femaleRBUT"
            android:layout_weight="1" />
    </RadioGroup>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regBut"
            android:layout_weight="1"
            style="@style/buttons"
            android:onClick="Register"/>

        <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backBut"
            android:layout_weight="1"
            style="@style/buttons"
            android:onClick="back"/>

    </LinearLayout>
</LinearLayout>
